# Emulators

./: README.md
CHIP-8/: CMakeLists.txt  GUIDE.md  README.md
CHIP-8/src/: chip-8.cpp  chip-8.h  main.cpp
NES/: CMakeLists.txt  README.md
NES/Header/: Cartridge.h  bus.h  cpu.h  mapper.h  mapper_000.h  ppu.h
NES/Source/: Nes_6502.cpp  bus.cpp  cartridge.cpp  cpu.cpp
NES/src/: Nes_6502.cpp  bus.cpp  bus.h  pixelEngine.h
NES/src/6502/: cpu.cpp  cpu.h
